Fix Bulma always showing overflow-y scrollbar

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,2 +1,6 @@
 @import '~bulma';
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+
+html {
+  overflow-y: auto;
+}
